feat: integrated gnews api

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+# API Keys for News Sources
+
 REACT_APP_NEWSAPI_KEY=a21cd34e930345af941d3cd818c41ba5
-# REACT_APP_GUARDIAN_KEY=13aba6d9-5d38-4c4e-99bc-7555045b1911
+
 REACT_APP_WORLDNEWS_KEY=b361ea72e00c460fbaaa52959dddd53c
+
+REACT_APP_GNEWS_KEY=dad09fc1018589e6c92e37d62148f36a
