--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,13 @@ services:
       context: .
       dockerfile: Dockerfile
       target: production
+      args:
+        - REACT_APP_NEWSAPI_KEY=${REACT_APP_NEWSAPI_KEY}
+        - REACT_APP_WORLDNEWS_KEY=${REACT_APP_WORLDNEWS_KEY}
     ports:
       - "3000:80"
     environment:
       - NODE_ENV=production
-      - REACT_APP_NEWSAPI_KEY=${REACT_APP_NEWSAPI_KEY}
-      - REACT_APP_WORLDNEWS_KEY=${REACT_APP_WORLDNEWS_KEY}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
