fix: updated documentation

--- a/env.example
+++ b/env.example
@@ -4,3 +4,4 @@ REACT_APP_NEWSAPI_KEY=your_newsapi_key_here
 
 REACT_APP_WORLDNEWS_KEY=your_worldnews_key_here
 
+REACT_APP_GNEWS_KEY=your_gnews_key_here
